:bug: Fix problem with disabled buttons visibility

--- a/frontend/resources/styles/common/refactor/themes/light-theme.scss
+++ b/frontend/resources/styles/common/refactor/themes/light-theme.scss
@@ -16,7 +16,7 @@
   --color-foreground-primary: var(--black);
   --color-foreground-secondary: var(--off-black);
   --color-foreground-tertiary: var(--pink);
-  --color-foreground-disabled: var(--light-gray-1);
+  --color-foreground-disabled: var(--off-black-30);
   --color-accent-primary: var(--purple);
   --color-accent-primary-muted: var(--purple-30);
   --color-accent-secondary: var(--blue);
